[package]
name = "fractal_btc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bitcoin = "0.32.2"
dotenv = "0.15.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
